--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "test": "jest --verbose"
   },
   "dependencies": {
+    "argon2": "^0.41.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.11.3"
   },
   "devDependencies": {
